apps/locplace/locplace.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locplace
  namespace: locplace
  labels:
    app: locplace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locplace
  template:
    metadata:
      name: locplace
      labels:
        app: locplace
    spec:
      containers:
        - name: locplace
          image: ghcr.io/locplace/server:0.2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 9090
              name: metrics
      restartPolicy: Always
